ui Add Trezor wallet support

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     default-src 'none';
     script-src 'self';
     style-src 'self';
+    frame-src https://connect.trezor.io;
     img-src 'self' https://robohash.org;
     manifest-src 'self';
     connect-src *;
