Trezor debugging build (2)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     form-action 'none';
     default-src 'none';
     script-src 'self';
-    style-src 'self';
+    style-src 'self'
+      'sha256-UpnKee22eAiBMULu1lvaV7de7xOzTjdN7K/WZDBil10='
+    ;
     frame-src https://connect.trezor.io;
     img-src 'self' https://robohash.org;
     manifest-src 'self';
