Style test build

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       'sha256-UpnKee22eAiBMULu1lvaV7de7xOzTjdN7K/WZDBil10='
     ;
     frame-src https://connect.trezor.io;
-    img-src 'self' https://robohash.org;
+    img-src 'self' data: https://robohash.org;
     manifest-src 'self';
+    font-src 'self';
     connect-src *;
   ">
 
